--- a/capo/src/admin/cssadmin/admindashboard.css
+++ b/capo/src/admin/cssadmin/admindashboard.css
@@ -1,14 +1,35 @@
-.admin-dashboard {
+.admin-dashboard-container {
     font-family: Arial, sans-serif;
-    padding: 20px;
+    display: flex;
+    flex-direction: column;
+    height: 100vh;
     background-color: #f9f9f9;
-    min-height: 100vh;
+    overflow-y: auto; /* Add vertical scrollbar */
 }
 
-h1 {
+.admin-dashboard-header {
+    background-color: rgba(20, 90, 76, 0.8); /* Slightly darker for better contrast */
+    color: white;
+    padding: 20px;
     text-align: center;
-    color: #145A4C;
+}
+
+.admin-dashboard-main {
+    flex: 1;
+    padding: 20px;
+    background-color: #f9f9f9;
+}
+
+.admin-dashboard-section {
     margin-bottom: 20px;
+}
+
+.admin-dashboard-section2 {
+    background-color: #ffffff;
+    padding: 20px;
+    border-radius: 8px;
+    box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
+    margin-top: 20px;
 }
 
 .chart-container {
@@ -18,4 +39,20 @@ h1 {
     padding: 20px;
     border-radius: 8px;
     box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
+}
+
+h1 {
+    text-align: center;
+    color: #ffffff;
+    margin-bottom: 10px;
+}
+
+h2 {
+    color: #145A4C;
+    margin-bottom: 10px;
+}
+
+p {
+    color: #555;
+    line-height: 1.6;
 }
